--- a/src/css/modules/_common.scss
+++ b/src/css/modules/_common.scss
@@ -158,7 +158,7 @@ $w: 450px;
     margin-bottom: 15px;
     li {
         display: inline-block;
-        padding-right: 4px;
+        padding-right: 5px;
     }
     li:last-child {
         padding-right: 0;
