--- a/src/css/modules/_page.scss
+++ b/src/css/modules/_page.scss
@@ -98,7 +98,9 @@ p {
     color: $c-grey2;    
     margin-top: 15px;
 }
-
+.f-no-wrap {
+    white-space: nowrap;
+}
 // style: elements
 
 .ul-candidates {
